[gd_scene load_steps=11 format=2]

[ext_resource path="res://libs/image_manipulator/image_manipulator.gd" type="Script" id=1]
[ext_resource path="res://levels/assets/destruction_maps/black-1024.png" type="Image" id=2]
[ext_resource path="res://levels/terrain.gd" type="Script" id=3]
[ext_resource path="res://libs/image_cache/image_cache.gd" type="Script" id=4]
[ext_resource path="res://levels/map_generator.gd" type="Script" id=5]
[ext_resource path="res://levels/assets/destructible_textures/ROCK-1.png" type="Texture" id=6]
[ext_resource path="res://levels/terrain-map.shader" type="Shader" id=7]
[ext_resource path="res://levels/resources/terrain_default.tres" type="Resource" id=8]
[ext_resource path="res://levels/assets/backgrounds/BG1-layer2.png" type="Texture" id=9]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 7 )
shader_param/outline_width = 2.0
shader_param/outline_color = null

[node name="Terrain" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}
destruction_map = ExtResource( 2 )

[node name="MapGenerator" type="Node" parent="."]
script = ExtResource( 5 )
terrain_definition = ExtResource( 8 )

[node name="ImageManipulator" type="Node" parent="."]
script = ExtResource( 1 )

[node name="ImageCache" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Graphics" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="background" type="ParallaxBackground" parent="Graphics"]

[node name="0" type="ParallaxLayer" parent="Graphics/background"]
visible = false

[node name="Sprite" type="Sprite" parent="Graphics/background/0"]
modulate = Color( 1, 1, 1, 0.756863 )
scale = Vector2( 4, 5.5 )
texture = ExtResource( 9 )
centered = false

[node name="terrain" type="Sprite" parent="Graphics"]
material = SubResource( 1 )
texture = ExtResource( 6 )
centered = false
region_rect = Rect2( 0, 0, 1024, 1024 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="image_updated" from="ImageManipulator" to="ImageCache" method="_on_image_updated"]
[connection signal="cache_updated" from="ImageCache" to="." method="_on_cache_updated"]
